Fix iPhone rotation. Minor readability improvements.

--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@
     Copyright (c) 2017 Seth Pendergrass. See LICENSE.
 */
 html {
-    background: black;
+    background: Navy;
     color: WhiteSmoke;
     font-family: "Courier New", monospace;
     font-size: 1.5rem;
@@ -60,12 +60,21 @@ div {
     right: 0;
     bottom: 0;
 }
-@media (max-width: 700px) {
-    html, h2, h3 {
+@media (max-width: 500px) {
+    a, li, p {
+        font-size: 6vw;
+    }
+    h2, h3 {
         font-size: 8vw;
     }
     h1 {
         font-size: 12vw;
+    }
+    h2 {
+        margin-top: 1rem;
+    }
+    h3 {
+        margin-bottom: 1rem;
     }
     ul {
         padding-left: 0;
